<resources>
    <string name="app_name">QuizIndia</string>
    <string name="topic">Quiz Topic  : INDIA</string>
    <string name="questions">QUSTIONS</string>
    <string name="q1">1. Who is the PrimeMinister of India ?</string>
    <string name="q2">2. How many states are there in India ?</string>
    <string name="q3">3. How many Union Territories are \nthere in India ?</string>
    <string name="q4">4. what is the population of India in 2020 ? </string>
    <string name="q5">5. What is India\'s rank in world population?</string>
    <string name="q6">6. What are the public transports in \nIndia(Any two) ?</string>

</resources>
