<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android" >
<androidx.constraintlayout.widget.ConstraintLayout

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/topic"
        style="@style/header"
        android:layout_marginStart="35dp"
        android:layout_marginTop="10dp"
        android:text="@string/topic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/question1"
        style="@style/quetions"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:text="@string/q1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topic" />

    <TextView
        android:id="@+id/question2"
        style="@style/quetions"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:text="@string/q2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/answer1" />

    <TextView
        android:id="@+id/question3"
        style="@style/quetions"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:text="@string/q3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radiogroup2" />

    <TextView
        android:id="@+id/question4"
        style="@style/quetions"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:text="@string/q4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radiogroup3" />

    <TextView
        android:id="@+id/question5"
        style="@style/quetions"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:text="@string/q5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radiogroup4" />

    <TextView
        android:id="@+id/question6"
        style="@style/quetions"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:text="@string/q6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radiogroup5" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="157dp"
        android:layout_marginTop="15dp"
        android:text="Submit"
        android:onClick="checkScore"
        android:background="@android:color/holo_green_light"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/option62" />

    <EditText
        android:id="@+id/answer1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:inputType="textCapCharacters"
        android:hint="FullName with Space"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/question1" />


    <RadioGroup
        android:id="@+id/radiogroup2"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/question2">

        <RadioButton
            android:id="@+id/answer2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="29" />

        <RadioButton
            android:id="@+id/option21"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="28" />

        <RadioButton
            android:id="@+id/option22"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="30" />

        <RadioButton
            android:id="@+id/option23"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="31" />


    </RadioGroup>

    <RadioGroup
        android:id="@+id/radiogroup3"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="15dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/question3">

        <RadioButton
            android:id="@+id/option31"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="9" />

        <RadioButton
            android:id="@+id/answer3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="8" />

        <RadioButton
            android:id="@+id/option32"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="6" />

        <RadioButton
            android:id="@+id/option33"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="7" />


    </RadioGroup>

    <RadioGroup
        android:id="@+id/radiogroup4"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="15dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/question4">

        <RadioButton
            android:id="@+id/option41"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="1.45 B" />

        <RadioButton
            android:id="@+id/option42"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="1.5 B" />

        <RadioButton
            android:id="@+id/answer4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="1.35 B" />

        <RadioButton
            android:id="@+id/option43"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="1.25 B" />


    </RadioGroup>

    <RadioGroup
        android:id="@+id/radiogroup5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="15dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/question5">

        <RadioButton
            android:id="@+id/option51"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="1" />

        <RadioButton
            android:id="@+id/answer5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="2" />

        <RadioButton
            android:id="@+id/option52"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="3" />

        <RadioButton
            android:id="@+id/option53"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="4" />
    </RadioGroup>

    <CheckBox
        android:id="@+id/answer6a"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:text="Bus"
        app:layout_constraintStart_toEndOf="@+id/answer6b"
        app:layout_constraintTop_toTopOf="@+id/option62" />

    <CheckBox
        android:id="@+id/answer6b"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="15dp"
        android:text="Train"
        app:layout_constraintStart_toEndOf="@+id/option62"
        app:layout_constraintTop_toBottomOf="@+id/question6" />

    <CheckBox
        android:id="@+id/option62"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="15dp"
        android:text="Bicycle"
        app:layout_constraintStart_toEndOf="@+id/option61"
        app:layout_constraintTop_toBottomOf="@+id/question6" />

    <CheckBox
        android:id="@+id/option61"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="15dp"
        android:text="Motorbike"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/question6" />


</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>


